# bmstu-ppo-6th-sem

./: .gitignore  README.md  package.json
.github/workflows/: rust.yml
img/: Components.graphml  bpmn.graphml  er.graphml  high-level-breakup.graphml  use-case.graphml
src-tauri/: .gitignore  Cargo.toml  build.rs  docker-compose.yml  tauri.conf.json
src-tauri/src/: lib.rs  macros.rs  main.rs  utils.rs
src-tauri/src/errors/: channel.rs  client.rs  db.rs  declaration.rs  mod.rs  processor.rs  representative.rs
src-tauri/src/models/: declaration.rs  mod.rs  processor.rs
src-tauri/src/models/customs/: inspector.rs  mod.rs  operator.rs
src-tauri/src/models/misc/: location.rs  mod.rs
src-tauri/src/models/participants/: client.rs  declarant.rs  mod.rs  representative.rs
src-tauri/src/repository/: mod.rs  repositories.rs  surreal_structs.rs  surrealdb.rs
src-tauri/tests/: integration_test.rs
src/pages/: index.tsx
