[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["archeosAnacritis@gmail.com"]
license-file = "../LICENSE"
repository = "https://github.com/archeoss/bmstu-ppo-6th-sem"
default-run = "app"
edition = "2021"
rust-version = "1.59"
categories = [ "Course work",  "Software Design", "Tauri"]
keywords = ["Tauri", "Dispatching"]
readme = "../README.md"
build = "./build/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27", features = ["full"] }
surrealdb = "1.0.0-beta.9"
# surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1.27", features = ["full"] }
paste = "1.0.12"
defile = "0.1.2"
futures = "0.3.28"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2" 
opentelemetry-jaeger = "0.16.0"
surrealdb = "1.0.0-beta.9"
serde_with = "3.0.0"
# surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }

[dependencies.uuid]
version = "1.3.1"
features = [
    "v7",                
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
# lto = true    # Link Time optimization, causes a bit longer compilation
# Optimize for size
# strip = true    # Strip symbols from binary; Turn off for cargo bloat command
# opt-level = "s"
# codegen-units = 1   # Maximize size reduction optimization, causes longer compilation
panic = "abort"
# Optimize for speed
opt-level = 3 
